<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiny4412_led_demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="led1">LED1</string>
    <string name="led2">LED2</string>
    <string name="led3">LED3</string>
    <string name="led4">LED4</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>

</resources>
