<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led1" />

        <Button
            android:id="@+id/bt_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ON" />

        <Button
            android:id="@+id/bt_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led2" />

        <Button
            android:id="@+id/bt_on2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ON" />

        <Button
            android:id="@+id/bt_off2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led3" />

        <Button
            android:id="@+id/bt_on3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ON" />

        <Button
            android:id="@+id/bt_off3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led4" />

        <Button
            android:id="@+id/bt_on4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ON" />

        <Button
            android:id="@+id/bt_off4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OFF" />
    </LinearLayout>

</LinearLayout>